Mon Jun  6 19:53:54 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.h:

          Restored the long double member back to the member union of
          Any_Basic_Impl. A change suggested by Adam Mitz <mitza at
          ociweb dot com> enabled the use of the LongDouble emulator
          struct without constructors or assignment operators.

        * TAO_IDL/be/be_visitor_constant/constant_ch.cpp:
        * TAO_IDL/be/be_visitor_constant/constant_cs.cpp:

          Changed code generation for long double constant initialization,
          when 16-byte native long double does not exist, to use the
          new LongDoubleAssign struct in ACE_CDR.

        * tests/IDL_Test/union.idl:

          Added a test case of a union containing a long double, to
          test that the generated union doesn't contain a member
          with a constructor.

Mon Jun  6 18:59:41 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_helper.cpp:

          Restored minimum significant digit suggestions for the format
          string for double, and added them to the format string for
          long double.

Mon Jun  6 17:28:05 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any_Basic_Impl.cpp:
        * tao/AnyTypeCode/Any_Basic_Impl.h:

          Added a separate member for long doubles, rather than have
          support for long doubles on all platforms disabled because
          the struct that is now used for some long double representations
          has a constructor.

        * tests/DynAny_Test/test_dynany.cpp:

          Reverted the change in

          Fri Jun  3 18:54:59 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

          since that part of the test will work again.

Mon Jun  6 15:06:42 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp: