@@ -2352,6 +2352,7 @@ Jonathan Saxton <jsaxton at appsecinc dot com>
 Remko Duppen <remko dot duppen at syntel dot nl>
 Paul Fitzpatrick <paul at robotrebuilt dot com>
 Chad Beaulac <chad dot beaulac at objectivesolutions dot com>
+Jochen Meier <gesammeltimusenet2009 at arcor dot de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
